feat: add user features